// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast extracts geometry quad symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "exported": false,
      "symbols": Array [
        "QUAD",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": "ivec2(0, 0)",
            "name": "QUAD",
          },
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [
            "const",
          ],
        },
      },
    },
  ],
  "externals": Array [],
  "functions": Array [
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadIndex",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadIndex",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadUV",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "hash": "6sp2mckooy",
  "modules": Array [],
  "refs": Array [
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadIndex",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadIndex",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadUV",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadUV",
      ],
    },
    Object {
      "exported": false,
      "symbols": Array [
        "QUAD",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": "ivec2(0, 0)",
            "name": "QUAD",
          },
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [
            "const",
          ],
        },
      },
    },
  ],
  "symbols": Array [
    "getQuadIndex",
    "getQuadUV",
    "QUAD",
  ],
  "visibles": Array [
    "getQuadIndex",
    "getQuadUV",
  ],
}
`;

exports[`ast extracts quad vertex declarations 1`] = `
Array [
  Object {
    "exported": false,
    "prototype": Object {
      "name": "getPosition",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [],
      },
    },
    "symbols": Array [
      "getPosition",
    ],
  },
  Object {
    "exported": false,
    "prototype": Object {
      "name": "getSize",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "float",
        "qualifiers": Array [],
      },
    },
    "symbols": Array [
      "getSize",
    ],
  },
]
`;

exports[`ast extracts quad vertex functions 1`] = `
Array [
  Object {
    "exported": true,
    "prototype": Object {
      "name": "getQuadVertex",
      "parameters": Array [
        "int",
        "vertexIndex",
      ],
      "type": Object {
        "name": "SolidVertex",
        "qualifiers": Array [],
      },
    },
    "symbols": Array [
      "getQuadVertex",
    ],
  },
]
`;

exports[`ast extracts quad vertex imports 1`] = `
Array [
  Object {
    "imports": Array [
      Object {
        "imported": "SolidVertex",
        "name": "SolidVertex",
      },
    ],
    "name": "use/types",
    "symbols": Array [
      "SolidVertex",
    ],
  },
  Object {
    "imports": Array [
      Object {
        "imported": "viewUniforms",
        "name": "viewUniforms",
      },
      Object {
        "imported": "worldToClip",
        "name": "worldToClip",
      },
    ],
    "name": "use/view",
    "symbols": Array [
      "viewUniforms",
      "worldToClip",
    ],
  },
  Object {
    "imports": Array [
      Object {
        "imported": "getQuadUV",
        "name": "getQuadUV",
      },
    ],
    "name": "geometry/quad",
    "symbols": Array [
      "getQuadUV",
    ],
  },
]
`;

exports[`ast extracts quad vertex symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getSize",
      ],
    },
  ],
  "externals": Array [
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getSize",
      ],
    },
  ],
  "functions": Array [
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadVertex",
        "parameters": Array [
          "int",
          "vertexIndex",
        ],
        "type": Object {
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadVertex",
      ],
    },
  ],
  "hash": "la43vh0i3i",
  "modules": Array [
    Object {
      "imports": Array [
        Object {
          "imported": "SolidVertex",
          "name": "SolidVertex",
        },
      ],
      "name": "use/types",
      "symbols": Array [
        "SolidVertex",
      ],
    },
    Object {
      "imports": Array [
        Object {
          "imported": "viewUniforms",
          "name": "viewUniforms",
        },
        Object {
          "imported": "worldToClip",
          "name": "worldToClip",
        },
      ],
      "name": "use/view",
      "symbols": Array [
        "viewUniforms",
        "worldToClip",
      ],
    },
    Object {
      "imports": Array [
        Object {
          "imported": "getQuadUV",
          "name": "getQuadUV",
        },
      ],
      "name": "geometry/quad",
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "refs": Array [
    Object {
      "imports": Array [
        Object {
          "imported": "SolidVertex",
          "name": "SolidVertex",
        },
      ],
      "name": "use/types",
      "symbols": Array [
        "SolidVertex",
      ],
    },
    Object {
      "imports": Array [
        Object {
          "imported": "viewUniforms",
          "name": "viewUniforms",
        },
        Object {
          "imported": "worldToClip",
          "name": "worldToClip",
        },
      ],
      "name": "use/view",
      "symbols": Array [
        "viewUniforms",
        "worldToClip",
      ],
    },
    Object {
      "imports": Array [
        Object {
          "imported": "getQuadUV",
          "name": "getQuadUV",
        },
      ],
      "name": "geometry/quad",
      "symbols": Array [
        "getQuadUV",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadVertex",
        "parameters": Array [
          "int",
          "vertexIndex",
        ],
        "type": Object {
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadVertex",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getSize",
      ],
    },
  ],
  "symbols": Array [
    "SolidVertex",
    "viewUniforms",
    "worldToClip",
    "getQuadUV",
    "getQuadVertex",
    "getPosition",
    "getSize",
  ],
  "visibles": Array [
    "getQuadVertex",
  ],
}
`;

exports[`ast extracts solid fragment declarations 1`] = `
Array [
  Object {
    "exported": false,
    "symbols": Array [
      "fragIndex",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragIndex",
        },
      ],
      "type": Object {
        "name": "uint",
        "qualifiers": Array [
          "layout(location = 0)",
          "in",
          "flat",
        ],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "outColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": Object {
        "name": "uvec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "fragColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "in",
        ],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "fragUV",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragUV",
        },
      ],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [
          "layout(location = 1)",
          "in",
        ],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "outColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
]
`;

exports[`ast extracts test declarations 1`] = `
Array [
  Object {
    "exported": false,
    "symbols": Array [
      "x",
      "y",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "x",
        },
        Object {
          "expr": null,
          "name": "y",
        },
      ],
      "type": Object {
        "name": "float",
        "qualifiers": Array [],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "a",
      "b",
      "c",
      "d",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": "3",
          "name": "a",
        },
        Object {
          "expr": "1",
          "name": "b",
        },
        Object {
          "expr": null,
          "name": "c",
        },
        Object {
          "expr": null,
          "name": "d",
        },
      ],
      "type": Object {
        "name": "int",
        "qualifiers": Array [],
      },
    },
  },
]
`;

exports[`ast extracts test declarations with array 1`] = `
Array [
  Object {
    "exported": false,
    "symbols": Array [
      "QUAD",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": "ivec2(0, 0)",
          "name": "QUAD",
        },
      ],
      "type": Object {
        "name": "ivec2",
        "qualifiers": Array [
          "const",
        ],
      },
    },
  },
]
`;

exports[`ast extracts use types symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "exported": true,
      "symbols": Array [
        "SolidVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
    },
    Object {
      "exported": true,
      "symbols": Array [
        "MeshVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "normal",
              "type": Object {
                "name": "vec3",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
    },
  ],
  "externals": Array [],
  "functions": Array [],
  "hash": "89q8792cwv",
  "modules": Array [],
  "refs": Array [
    Object {
      "exported": true,
      "symbols": Array [
        "SolidVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
    },
    Object {
      "exported": true,
      "symbols": Array [
        "MeshVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "normal",
              "type": Object {
                "name": "vec3",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
    },
  ],
  "symbols": Array [
    "SolidVertex",
    "MeshVertex",
  ],
  "visibles": Array [
    "SolidVertex",
    "MeshVertex",
  ],
}
`;

exports[`ast extracts use view declarations 1`] = `
Array [
  Object {
    "exported": true,
    "struct": Object {
      "name": "viewUniforms",
      "struct": Object {
        "members": Array [
          Object {
            "name": "projectionMatrix",
            "type": Object {
              "name": "mat4",
            },
          },
          Object {
            "name": "viewMatrix",
            "type": Object {
              "name": "mat4",
            },
          },
          Object {
            "name": "viewPosition",
            "type": Object {
              "name": "vec4",
            },
          },
          Object {
            "name": "viewResolution",
            "type": Object {
              "name": "vec2",
            },
          },
          Object {
            "name": "viewSize",
            "type": Object {
              "name": "vec2",
            },
          },
        ],
      },
      "type": Object {
        "name": "ViewUniforms",
        "qualifiers": Array [
          "layout(set = 0, binding = VIEW_BINDING)",
          "uniform",
        ],
      },
    },
    "symbols": Array [
      "viewUniforms",
      "ViewUniforms",
    ],
  },
]
`;

exports[`ast extracts use view symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "exported": true,
      "struct": Object {
        "name": "viewUniforms",
        "struct": Object {
          "members": Array [
            Object {
              "name": "projectionMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewPosition",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "viewResolution",
              "type": Object {
                "name": "vec2",
              },
            },
            Object {
              "name": "viewSize",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
        },
        "type": Object {
          "name": "ViewUniforms",
          "qualifiers": Array [
            "layout(set = 0, binding = VIEW_BINDING)",
            "uniform",
          ],
        },
      },
      "symbols": Array [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
  ],
  "externals": Array [],
  "functions": Array [
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToView",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToView",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "viewToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "viewToClip",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToClip",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "clipToScreen3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "clipToScreen3D",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "screenToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "screenToClip3D",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToClip3D",
      ],
    },
  ],
  "hash": "ng9x7m5kzj",
  "modules": Array [],
  "refs": Array [
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToView",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToView",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "viewToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "viewToClip",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToClip",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "clipToScreen3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "clipToScreen3D",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "screenToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "screenToClip3D",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToClip3D",
      ],
    },
    Object {
      "exported": true,
      "struct": Object {
        "name": "viewUniforms",
        "struct": Object {
          "members": Array [
            Object {
              "name": "projectionMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewPosition",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "viewResolution",
              "type": Object {
                "name": "vec2",
              },
            },
            Object {
              "name": "viewSize",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
        },
        "type": Object {
          "name": "ViewUniforms",
          "qualifiers": Array [
            "layout(set = 0, binding = VIEW_BINDING)",
            "uniform",
          ],
        },
      },
      "symbols": Array [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
  ],
  "symbols": Array [
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "viewUniforms",
    "ViewUniforms",
  ],
  "visibles": Array [
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "viewUniforms",
    "ViewUniforms",
  ],
}
`;

exports[`ast rewrites a lot of code using the compressed AST 1`] = `
Array [
  Array [
    "Skip",
    1,
    46,
  ],
  Array [
    "Id",
    48,
    59,
  ],
  Array [
    "Id",
    60,
    69,
  ],
  Array [
    "Id",
    107,
    115,
  ],
  Array [
    "Id",
    135,
    144,
  ],
  Array [
    "Id",
    159,
    167,
  ],
  Array [
    "Id",
    182,
    191,
  ],
  Array [
    "Id",
    200,
    208,
  ],
  Array [
    "Id",
    223,
    229,
  ],
  Array [
    "Id",
    244,
    248,
  ],
  Array [
    "Id",
    259,
    270,
  ],
  Array [
    "Id",
    273,
    287,
  ],
  Array [
    "Id",
    295,
    308,
  ],
  Array [
    "Id",
    311,
    327,
  ],
  Array [
    "Id",
    332,
    343,
  ],
  Array [
    "Id",
    344,
    345,
  ],
  Array [
    "Id",
    348,
    357,
  ],
  Array [
    "Id",
    358,
    369,
  ],
  Array [
    "Id",
    371,
    384,
  ],
  Array [
    "Id",
    390,
    401,
  ],
  Array [
    "Id",
    404,
    405,
  ],
  Array [
    "Id",
    423,
    433,
  ],
  Array [
    "Id",
    436,
    445,
  ],
  Array [
    "Id",
    453,
    466,
  ],
  Array [
    "Id",
    477,
    486,
  ],
  Array [
    "Id",
    489,
    490,
  ],
  Array [
    "Id",
    500,
    506,
  ],
  Array [
    "Id",
    509,
    510,
  ],
]
`;

exports[`ast rewrites a lot of code using the compressed AST 2`] = `
Object {
  "cursor": [Function],
}
`;

exports[`ast rewrites code using the AST 1`] = `
"
    float _zz_getValue(int index);
    void entryPoint() {
      float x = 3.0;
      float y = _zz_getValue(2);
    }
    "
`;

exports[`ast rewrites code using the compressed AST 1`] = `
Array [
  Array [
    "Id",
    11,
    19,
  ],
  Array [
    "Id",
    24,
    29,
  ],
  Array [
    "Id",
    41,
    45,
  ],
  Array [
    "Id",
    62,
    63,
  ],
  Array [
    "Id",
    83,
    84,
  ],
  Array [
    "Id",
    87,
    95,
  ],
  Array [
    "Id",
    111,
    112,
  ],
  Array [
    "Id",
    120,
    121,
  ],
]
`;

exports[`ast rewrites code using the compressed AST 2`] = `
Object {
  "cursor": [Function],
}
`;
